--- a/src/app/Rings/About/About.module.css
+++ b/src/app/Rings/About/About.module.css
@@ -37,7 +37,8 @@
   justify-content: space-around;
   align-items: center;
   margin: 1rem 3rem 1rem 3rem;
-  background-color: rgba(0, 92, 142, 0.245);
+  background: transparent !important;
+  /* background-color: rgba(0, 92, 142, 0.245); */
   border-radius: 30px;
   padding: 2rem;
 }
